[gd_scene load_steps=9 format=2]

[ext_resource path="res://PixelFont.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Audio/479329__kinoton__sci-fi-drone-1.wav" type="AudioStream" id=2]
[ext_resource path="res://GameMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/screen.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/NinePatchRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -58.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 1

[node name="MainMenu" type="CenterContainer" parent="CanvasLayer/NinePatchRect/Menu"]
margin_left = 232.0
margin_right = 792.0
margin_bottom = 132.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/NinePatchRect/Menu/MainMenu"]
margin_right = 560.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="CanvasLayer/NinePatchRect/Menu/MainMenu/VBoxContainer"]
margin_right = 560.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Reencarnation Lab"
uppercase = true

[node name="Play" type="Button" parent="CanvasLayer/NinePatchRect/Menu/MainMenu/VBoxContainer"]
margin_left = 242.0
margin_top = 68.0
margin_right = 318.0
margin_bottom = 98.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="ControlsButton" type="Button" parent="CanvasLayer/NinePatchRect/Menu/MainMenu/VBoxContainer"]
margin_left = 223.0
margin_top = 102.0
margin_right = 337.0
margin_bottom = 132.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "controls"

[node name="ControlsList" type="VBoxContainer" parent="CanvasLayer/NinePatchRect/Menu"]
visible = false
margin_left = 329.0
margin_top = 2.0
margin_right = 694.0
margin_bottom = 113.0
size_flags_horizontal = 4

[node name="ControlsListLabel" type="Label" parent="CanvasLayer/NinePatchRect/Menu/ControlsList"]
margin_right = 365.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 5 )
text = "Controls:
Move: Left and right arrows
Jump: Up arrow / Space"

[node name="Button" type="Button" parent="CanvasLayer/NinePatchRect/Menu/ControlsList"]
margin_left = 159.0
margin_top = 91.0
margin_right = 205.0
margin_bottom = 111.0
size_flags_horizontal = 4
text = "BACK"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/NinePatchRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -211.0
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/NinePatchRect/MarginContainer"]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 4 )
text = "A tiny game by JONYSN1P3R"
align = 1
valign = 2
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.555
autoplay = true

[connection signal="button_down" from="CanvasLayer/NinePatchRect/Menu/MainMenu/VBoxContainer/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="CanvasLayer/NinePatchRect/Menu/MainMenu/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_button_down"]
[connection signal="button_down" from="CanvasLayer/NinePatchRect/Menu/ControlsList/Button" to="." method="_on_Button_button_down"]
